fix: remove gap from navigation

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -111,7 +111,6 @@ body {
 
 .nav__list {
   justify-content: flex-start;
-  gap: 7px;
   width: 600px;
 }
 
